--- a/tex/Text/2.Abstract.tex
+++ b/tex/Text/2.Abstract.tex
@@ -1,6 +1,6 @@
 
 \chapter*{Abstract}
-This work intends to relate the press conferences of the European Central Bank, for a period from January 2005 to December 2020, with the macroeconomic scenario and with real European macroeconomic variables. As exposed by \cite[]{shapiro2020measuring, shapiro2021taking} and \cite[]{barsky2012information} it is possible to better understand what happens in the real economy from sentiment indices. This work follows \cite{shapiro2020measuring} when the author exposes the possibility of an economic index obtained by Natural Language Processing techniques through minutes and central bank reports, allowing a correlation with different macroeconomic scenarios. The methodology used includes processing techniques of Natural Language Processing and Sentiment Analysis. To relate the indices with macroeconomic variables, variable selection models are used (LASSO, Adaptive Lasso and Elastic Net). Furthermore, impulse response functions are obtained for a shock to the index and it is analyzed how the macroeconomic variables respond to a shock in the economic sentiment index.
+This paper presents the relations between the speeches of the European Central Bank, for a period from January 2005 to December 2020, with the macroeconomic scenario and with real European macroeconomic variables. As exposed by \cite[]{shapiro2020measuring, shapiro2021taking} and \cite[]{barsky2012information} it is possible to better understand what happens in the real economy from sentiment indices. This work follows \cite{shapiro2020measuring} when the author exposes the emphasis of an economic index obtained by Natural Language Processing techniques through minutes and central bank reports, allowing a correlation with different macroeconomic scenarios. The methodology used includes processing techniques of Natural Language Processing and Sentiment Analysis. To relate the indices with macroeconomic variables, variable selection models are used (LASSO, Adaptive Lasso and Elastic Net). Furthermore, the impulse response functions for a shock to the index are obtained and how the macroeconomic variables respond to a shock to the economic sentiment index are analyzed.
 \par
 \vspace{0.5in}    
     
