--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt] {report}
+\documentclass[12pt]{report}
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage[utf8]{inputenc}
@@ -74,7 +74,7 @@ BoldItalicFont=GARA.ttf,
 
 \usepackage{indentfirst}
 
-\title{European Central Bank Speeches: A Case Study}
+\title{European Central Bank Speeches: A Sentiment Analysis Case Study}
 \author{Gustavo de Oliveira Vital}
 \date{\today}
 
