--- a/tex/FirstPage.tex
+++ b/tex/FirstPage.tex
@@ -8,7 +8,7 @@
 \end{figure}
 
 \vspace*{0.7in}
-{\LARGE \textbf{ {\scshape European Central Bank Speeches: A Case Study}}}
+{\LARGE \textbf{ {\scshape European Central Bank Speeches: A Sentiment Analysis Case Study}}}
 \par
 \vspace{0.4in}
 {\large By}
