--- a/tex/References.bib
+++ b/tex/References.bib
@@ -862,3 +862,20 @@ author = {Rickard Nyman and Sujit Kapadia and David Tuckett}
   pages={105--114},
   year={2020}
 }
+
+% R for data science: import, tidy, transform, visualize, and model data
+@book{wickham2016r,
+  title={R for data science: import, tidy, transform, visualize, and model data},
+  author={Wickham, Hadley and Grolemund, Garrett},
+  year={2016},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+% dplyr: A Grammar of Data Manipulation
+@Manual{dplyr2022,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2022},
+    note = {R package version 1.0.9},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
