--- a/tex/FirstPage.tex
+++ b/tex/FirstPage.tex
@@ -17,7 +17,7 @@
 {\large Gustavo de Oliveira Vital}
 \par
 \vspace{1in}
-{\large Master Thesis in Economics}
+{\large Master Dissertation in Economics}
 \par
 \vspace{0.8in}
 \end{center}
