--- a/tex/References.bib
+++ b/tex/References.bib
@@ -546,7 +546,7 @@
   year={2001}
 }
 
-% Monetary policy and asset prices
+% Monetary policy and asset prices %% ALTERAR
 @article{kohn2006monetary,
   title={Monetary policy and asset prices},
   author={Kohn, Donald L},
@@ -703,10 +703,12 @@
   year={2010}
 }
 
-% Natural language processing
-@article{liddy2001natural,
-  title={Natural language processing},
+% Natural language processing 
+@book{liddy2001natural,
+  title={Natural language processing. In Encyclopedia of Library and Information Science},
   author={Liddy, Elizabeth D},
+  edition={2},
+  publisher = {Marcel Decker},
   year={2001}
 }
 
@@ -811,7 +813,7 @@ author = {Rickard Nyman and Sujit Kapadia and David Tuckett}
 }
 
 % Central banks in parliaments: A text analysis of the parliamentary hearings of the bank of england, the european central bank and the federal reserve
-@article{fraccaroli2020central,
+@report{fraccaroli2020central,
   title={Central banks in parliaments: A text analysis of the parliamentary hearings of the bank of england, the european central bank and the federal reserve},
   author={Fraccaroli, Nicol{\`o} and Giovannini, Alessandro},
   year={2020},
