--- a/tex/Text/3.Resumo.tex
+++ b/tex/Text/3.Resumo.tex
@@ -1,5 +1,5 @@
 \chapter*{Resumo}
-Este trabalho pretende relacionar as conferências de imprensa do Banco Central Europeu, para um período de janeiro de 2005 a dezembro de 2020, com o cenário macroeconómico e com variáveis macroeconómicas reais europeias. Conforme exposto por \cite[]{shapiro2020measuring, shapiro2021taking} e \cite[]{barsky2012information} é possível entender melhor o que acontece na economia real a partir de indices de sentimentos. Este trabalho segue \cite{shapiro2020measuring} quando o autor expoe a possibilidade de um indice economico obtido por tecnicas de Natural Language Processing atraves de atas e relatórios de bancos centrais, permitindo uma correlação com diferentes cenários macroeconômicos. A metodologia utilizada engloba técnicas de processamento de Natural Language Processing e Sentiment Analysis. Para relacionar os indices com variaveis macroeconomicas, se faz o uso de modelos de seleção de variaveis (LASSO, Adaptive Lasso e Elastic Net). Ainda, são obtidas as funções de resposta ao impulso para um choque no indice e analisa-se como as variaveis macroeconomicas respondem a um choque no indice de sentimentos economico.
+Este trabalho pretende relacionar as conferências de imprensa do Banco Central Europeu, para um período de janeiro de 2005 a dezembro de 2020, com o cenário macroeconómico e com variáveis macroeconómicas reais europeias. Conforme exposto por \cite[]{shapiro2020measuring, shapiro2021taking} e \cite[]{barsky2012information} é possível entender melhor o que acontece na economia real a partir de indices de sentimentos. Este trabalho segue \cite{shapiro2020measuring} quando o autor expoe a possibilidade de um indice economico obtido por tecnicas de Natural Language Processing atraves de atas e relatórios de bancos centrais, permitindo uma correlação com diferentes cenários macroeconômicos. A metodologia utilizada engloba técnicas de processamento de Natural Language Processing e Sentiment Analysis. Para relacionar os indices com variaveis macroeconomicas, se faz o uso de modelos de seleção de variaveis (LASSO, Adaptive LASSO e Elastic Net). Ainda, são obtidas as funções de resposta ao impulso para um choque no indice e analisa-se como as variaveis macroeconomicas respondem a um choque no indice de sentimentos economico.
 
 
 
