--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2,6 +2,9 @@
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage[utf8]{inputenc}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+%\usepackage{algorithm2e}
 \usepackage{adjustbox}
 \usepackage [top=3cm, bottom=3cm, left=35mm, right=25mm] {geometry}
 
@@ -53,7 +56,7 @@ BoldItalicFont=GARA.ttf,
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
 
-\usepackage{lscape}
+\usepackage{pdflscape}
 
 
 \usepackage[utf8]{inputenc}
@@ -143,12 +146,12 @@ BoldItalicFont=GARA.ttf,
 \bibliographystyle{apacite}
 \bibliography{References.bib}
 
-%\newpage 
+\newpage 
 
-%\chapter*{Appendix}
-%\addcontentsline{toc}{chapter}{Appendix}
-%\renewcommand*{\thesection}{\Alph{section}}
-%\input{Text/Appendix.tex}
+\chapter*{Appendix}
+\addcontentsline{toc}{chapter}{Appendix}
+\renewcommand*{\thesection}{\Alph{section}}
+\input{Text/Appendix.tex}
 
 
 
